--- a/app/views/content/admin/photopolymers.phtml
+++ b/app/views/content/admin/photopolymers.phtml
@@ -14,6 +14,7 @@
 <?php 
 	print View::formValidate();
 	print View::formNormal('photopolymer');
+	print View::formNormal('id_1c');
 	print View::formOffset('add', 'submit');
 ?>
 </form>
