--- a/app/views/content/system/login.phtml
+++ b/app/views/content/system/login.phtml
@@ -4,6 +4,7 @@
 		print View::input('_url', 'hidden', '/user');
 		print View::formNormal('email', 'email');
 		print View::formNormal('password', 'password');
+		if ($this->useCaptcha) print View::formOffset('captcha', 'any', '<div class="g-recaptcha" data-sitekey="6LcSXA8TAAAAAIi7wNkkwexFocdu7XbeyAb2HglT"></div>');
 		print View::formOffset('signup', 'submit');
 	?>
 </form>
