--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -15,8 +15,13 @@
 		<div class="blue-bg top-first-line"></div>
 		<div class="top-second-line"></div>
 		<div class="white-bg container drop-shadow" id="main">
-			<div class="container header">
-				<a href="/"><img src="/img/repropark.jpg" id="logo"></a>
+			<div class="row header">
+				<div class="col-sm-8">
+					<a href="/"><img src="/img/repropark.jpg" id="logo"></a>
+				</div>
+				<div class="col-sm-4">
+					<?php $this->getSubMenu(); ?>
+				</div>
 			</div>
 			<div class="container" id="cols">
 				<div class="row">
