--- a/app/views/content/admin/group-photopolymers.phtml
+++ b/app/views/content/admin/group-photopolymers.phtml
@@ -1,7 +1,7 @@
 <form method="post" class="form-horizontal">
 <?php
 	print View::formValidate();
-	print View::formNormal('photopolymers', 'multiple', $this->photopolymers, true);
+	print View::formNormal('photopolymers', 'multiple', $this->photopolymers, true, null, null, 15);
 	print View::formNormal('group');
 	print View::formOffset('set', 'submit');
 ?>
