--- a/app/views/content/order/filter.phtml
+++ b/app/views/content/order/filter.phtml
@@ -10,9 +10,15 @@
 					<?php
 						print View::input('sort', 'hidden', $this->order_by->field);
 						print View::input('by', 'hidden', $this->order_by->by);
-						print View::formNormal('status', 'multiple', Order::statuses(), false, false, $this->order_filter->status);
-						print View::formNormal('date_due_start', 'date', $this->order_filter->date_due_start);
-						print View::formNormal('date_due_end', 'date', $this->order_filter->date_due_end);
+						print View::formSmall('status', 'multiple', Order::statuses(), false, false, $this->order_filter->status);
+						
+						$date_due = '<div class="col-sm-5">' . View::input('date_due_start', 'date', $this->order_filter->date_due_start, false) . '</div>' .
+									'<div class="col-sm-5">' . View::input('date_due_end', 'date', $this->order_filter->date_due_end, false) . '</div>';
+						print View::formAny('date_due', $date_due, 2);
+						
+						$date_created =	'<div class="col-sm-5">' . View::input('date_created_start', 'date', $this->order_filter->date_created_start, false) . '</div>' .
+										'<div class="col-sm-5">' . View::input('date_created_end', 'date', $this->order_filter->date_created_end, false) . '</div>';
+						print View::formAny('date_created', $date_created, 2);
 					?>
 				</div>
 				<div class="modal-footer">
