--- a/public/css/repropark.css
+++ b/public/css/repropark.css
@@ -25,7 +25,7 @@ a:hover {
 	text-decoration: none;
 }
 
-.panel-primary a {
+.panel-primary .panel-heading a {
 	color: #fff;
 }
 
@@ -70,6 +70,23 @@ a:hover {
 	border-left: 2px dotted #92c3d2;
 }
 
+.header .menu {
+	text-align: right;
+	list-style: none;
+	text-transform: uppercase;
+	font-size: 7pt;
+	margin: 15px 15px 0 0;
+}
+
+.header .menu>li {
+	display: inline-block;
+	margin: 0 7px;
+}
+
+.header .menu a.active {
+	text-decoration: underline;
+}
+
 .left {
 	padding: 0px;
 }
@@ -82,15 +99,6 @@ a:hover {
 	list-style: none;
 }
 
-.left .menu li {
-	list-style: none;
-	list-style-image: none;
-	list-style-position: outside;
-	line-height: 2.5em;
-	font-size: 9pt;
-	
-}
-
 .menu li a {
 	position: relative;
 	display: block;
@@ -101,6 +109,18 @@ a:hover {
 	font-size: 10px;
 }
 
+table.orders td.td_title {
+	max-width: 10em;
+	overflow: hidden;
+}
+
+.left .menu li {
+	list-style: none;
+	list-style-image: none;
+	list-style-position: outside;
+	line-height: 2.5em;
+	font-size: 9pt;
+}
 
 .left .menu a,
 .left .menu a:visited {
