--- a/app/views/content/admin/fields-edit.phtml
+++ b/app/views/content/admin/fields-edit.phtml
@@ -8,6 +8,7 @@
 			<th><?php print View::str('type'); ?></th>
 			<th><?php print View::str('mandatory'); ?></th>
 			<th><?php print View::str('weight'); ?></th>
+			<th></th>
 		</tr></thead>
 		<tbody>
 			<?php
@@ -15,15 +16,19 @@
 			foreach ($this->fields as $field) {
 				$class = '';
 				if ($field->isSystem()) $class = ' class="success"';
-				else if ($field->isCommon()) $class = ' class="active"';
 				
 				$html .= '<tr' . $class . '>';
 				$html .= '<td>' . $field->name . '</td>';
 				$html .= '<td>' . $field->type . '</td>';
 				$html .= '<td>' . View::bool2icon($field->mandatory) . '</td>';
 				$html .= '<td>' . $field->weight . '</td>';
+				
+				$html .= '<td>';
+				if ($field->canDelete()) $html .= View::link(Route::FIELD_DELETE, '', 'id=' . $field->id, 'edit', 'btn btn-xs btn-danger glyphicon glyphicon-remove', null, 'top');
+				$html .= '</td>';
+				
 				$html .= '</tr>';
-				//$html .= View::link(Route::POLYMER_DELETE, '<div class="pull-right"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></div>', 'id=' . $field->id);
+				
 			}
 			print $html;
 			?>
