просмотр заказа с динамическими полями поддержал поле с типом select фикс hidden полей, не использовать их нигде (костыль?)

--- a/app/views/content/admin/field/add.phtml
+++ b/app/views/content/admin/field/add.phtml
@@ -3,6 +3,7 @@
 	print View::formValidate();
 	print View::formNormal('name', 'text');
 	print View::formNormal('type', 'select', $this->types, false, false);
+	print View::formNormal('value', 'text');
 	print View::formNormal('weight', 'numeric', 0);
 	print View::formOffset('mandatory', 'checkbox');
 	print View::formOffset('add', 'submit');
