--- a/app/views/content/admin/field/page.phtml
+++ b/app/views/content/admin/field/page.phtml
@@ -6,7 +6,7 @@
 			<?php print View::link(Route::FIELD_BIND, '', 'page=' . $this->page->name, null, 'btn btn-xs btn-primary glyphicon glyphicon-user', null, 'top'); ?>
 		</div>
 	</div>
-	<table class="table">
+	<table class="table table-middle">
 		<thead><tr>
 			<th><?php print View::str('name'); ?></th>
 			<th><?php print View::str('type'); ?></th>
@@ -22,14 +22,22 @@
 				if ($field->isSystem()) $class = ' class="success"';
 				
 				$html .= '<tr' . $class . '>';
+				
+				$html .= '<form method="get">';
+				$html .= View::input('page', 'hidden', $this->page->name);
+				$html .= View::input('id', 'hidden', $field->id);
+				
 				$html .= '<td>' . $field->name . '</td>';
 				$html .= '<td>' . $field->type . '</td>';
 				$html .= '<td>' . View::bool2icon($field->mandatory) . '</td>';
-				$html .= '<td>' . $field->weight . '</td>';
+				$html .= '<td>' . View::input('weight', 'numeric', $field->weight) . '</td>';
 				
 				$html .= '<td>';
-				if ($field->canDelete()) $html .= View::link(Route::FIELD_DELETE, '', 'id=' . $field->id, 'edit', 'btn btn-xs btn-danger glyphicon glyphicon-remove', null, 'top');
+				//$html .= View::input('', 'submit', 'btn btn-xs btn-success glyphicon glyphicon-ok');
+				if ($field->canDelete()) $html .= '&nbsp;' . View::link(Route::FIELD_DELETE, '', 'id=' . $field->id, 'edit', 'btn btn-xs btn-danger glyphicon glyphicon-remove', null, 'top');
 				$html .= '</td>';
+				
+				$html .= '</form>';
 				
 				$html .= '</tr>';
 				
