--- a/app/views/content/admin/polymer/bind.phtml
+++ b/app/views/content/admin/polymer/bind.phtml
@@ -1,8 +1,8 @@
 <form method="post" class="form-horizontal">
 <?php
 	print View::formValidate();
-	print View::formNormal('photopolymers', 'multiple', $this->photopolymers, true, null, null, 15);
-	print View::formNormal('group');
+	print View::input('gid', 'hidden', get('gid'));
+	print View::formNormal('photopolymers', 'multiple', $this->photopolymers, true, false, $this->current_photopolymers, 15);
 	print View::formOffset('set', 'submit');
 ?>
 </form>
