--- a/app/views/content/order/index.phtml
+++ b/app/views/content/order/index.phtml
@@ -1,15 +1,16 @@
 <div class="panel panel-default">
 	<div class="panel-heading"><?php print sprintf(View::str('all_orders_result'), count($this->orders)); ?>
 		<div class="pull-right">
-			<?php print View::link('#', '', null, 'add', 'btn btn-xs btn-primary glyphicon glyphicon-filter', View::str('filter'), null, array('toggle' => 'modal', 'target' => '#filterModal')); ?>
-			<?php print View::link(Route::ORDER_ADD, '', null, 'add', 'btn btn-xs btn-primary glyphicon glyphicon-plus', null, 'top'); ?>
-			<?php print View::link(Route::ORDER_VIEW, '', null, 'view', 'btn-action btn btn-xs btn-primary glyphicon glyphicon-eye-open disabled', null, 'top'); ?>
-			<?php print View::link(Route::ORDER_EDIT, '', null, 'edit', 'btn-action btn btn-xs btn-primary glyphicon glyphicon-pencil disabled', null, 'top'); ?>
-			<?php print View::link(Route::ORDER_DUPLICATE, '', null, 'duplicate', 'btn-action btn btn-xs btn-primary glyphicon glyphicon-duplicate disabled', null, 'right'); ?>
+			<?php print View::link('#', '<span class="glyphicon glyphicon-filter" aria-hidden="true"></span> ' . View::str('filter'), null, 'filter', 'btn btn-xs btn-primary', View::str('filter'), null, array('toggle' => 'modal', 'target' => '#filterModal')); ?>
+			<?php print View::link(Route::ORDER_ADD, '<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ' . View::str('add'), null, 'add', 'btn btn-xs btn-primary', null, 'top'); ?>
+			<?php print View::link(Route::ORDER_ADD_TEMPLATE, '<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> ' . View::str('preset'), null, 'add', 'btn btn-xs btn-primary', null, 'top'); ?>
+			<?php print View::link(Route::ORDER_VIEW, '<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> ' . View::str('view'), null, 'view', 'btn-action btn btn-xs btn-primary disabled', null, 'top'); ?>
+			<?php print View::link(Route::ORDER_EDIT, '<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> ' . View::str('edit'), null, 'edit', 'btn-action btn btn-xs btn-primary disabled', null, 'top'); ?>
+			<?php print View::link(Route::ORDER_DUPLICATE, '<span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span> ' . View::str('duplicate'), null, 'duplicate', 'btn-action btn btn-xs btn-primary disabled', null, 'right'); ?>
 		</div>
 	</div>
 	
-	<table class="orders table table-hover">
+	<table class="table table-selected table-hover">
 		<thead>
 			<tr>
 				<?php
@@ -29,7 +30,7 @@
 			foreach ($this->orders as $n => $order) {
 				$classes = array();
 				
-				$classes[] = 'order_row';
+				$classes[] = 'table_row';
 				$classes[] = 'noselect';
 				$classes[] = 'cursor_pointer';
 				
