--- a/app/views/content/system/login.phtml
+++ b/app/views/content/system/login.phtml
@@ -1,7 +1,7 @@
 <form action="/login" method="post" class="form-horizontal">
 	<?php 
 		print View::formValidate();
-		print View::input('_url', 'hidden', '/user');
+		print View::input('_url', 'hidden', '');
 		print View::formNormal('email', 'email');
 		print View::formNormal('password', 'password');
 		if ($this->useCaptcha) print View::formOffset('captcha', 'any', '<div class="g-recaptcha" data-sitekey="6LcSXA8TAAAAAIi7wNkkwexFocdu7XbeyAb2HglT"></div>');
