--- a/app/views/content/system/login.phtml
+++ b/app/views/content/system/login.phtml
@@ -1,8 +1,9 @@
 <form action="/login" method="post" class="form-horizontal">
 	<?php 
 		print $this->api->request->render();
-		print View::input('_url', 'hidden', '');
-		if ($this->useCaptcha) print View::formOffset('captcha', 'any', '<div class="g-recaptcha" data-sitekey="6LcSXA8TAAAAAIi7wNkkwexFocdu7XbeyAb2HglT"></div>');
+		if ($this->useCaptcha) {
+			print View::formOffset('captcha', 'any', '<div class="g-recaptcha" data-sitekey="6LcSXA8TAAAAAIi7wNkkwexFocdu7XbeyAb2HglT"></div>');
+		}
 		print View::formOffset('signup', 'submit');
 	?>
 </form>
